# BRUCE-RAG-System

./: CMakeLists.txt  Makefile  README.md  docker-compose.yml
config/: bruce.yaml
docs/: API.md  ARCHITECTURE.md  BENCHMARK.md  CLI.md  DATABASE.md  DEPLOYMENT.md  DEVELOPMENT.md
schema/: 00_knowledge_db.sql  01_finish_db.sql
scripts/: benchmark_backends.py  build_llama_cuda.sh  eval_retrieval.py  import_docs.py  install_dependencies.sh  real_stress_benchmark.py  run_calc_server.sh  setup_database.sh
src/cli/: main.cpp
src/cpp/: CMakeLists.txt  bruce_core.cpp  hierarchical_guard.cpp  hierarchical_guard.hpp  ipc_client.cpp  ipc_client.hpp  main.cpp  routing_table.cpp  routing_table.hpp  state_to_hierarchy.cpp  state_to_hierarchy.hpp
src/python/: Dockerfile  requirements.runtime.txt  requirements.txt
src/python/api/: main.py
src/python/assembler/: __init__.py  service.py
src/python/calc_models/: backends.py  prompts.py  service.py
src/python/common/: __init__.py  assembly.py  db.py  settings.py
src/python/embedding/: service.py
tests/unit/: test_assembly.py
